crates/oxvg_actions/src/actions/structure/snapshots/oxvg_actions__actions__structure__deletion__test__flatten-2.snap
---
source: crates/oxvg_actions/src/actions/structure/deletion.rs
expression: actor.derive_state().unwrap()
---
DerivedState {
    history: [
        Select(
            Cow(
                "g",
            ),
        ),
        Flatten,
    ],
    selection: [
        3,
        4,
        6,
        7,
        9,
    ],
    info: None,
    ui: None,
}
