crates/oxvg_actions/src/actions/structure/snapshots/oxvg_actions__actions__structure__deletion__test__flatten.snap
---
source: crates/oxvg_actions/src/actions/structure/deletion.rs
expression: actor.root.serialize().unwrap()
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:oxvg="https://oxvg.noahwbaldwin.me"><text>One</text><text>Two</text><oxvg:state><oxvg:history><oxvg:action oxvg:id="Select"><oxvg:arg>g</oxvg:arg></oxvg:action><oxvg:action oxvg:id="Flatten"/></oxvg:history><oxvg:selection oxvg:ids="3 4 6 7 9"/></oxvg:state></svg>
