crates/oxvg_actions/src/actions/structure/snapshots/oxvg_actions__actions__structure__deletion__test__insert-2.snap
---
source: crates/oxvg_actions/src/actions/structure/deletion.rs
expression: actor.derive_state().unwrap()
---
DerivedState {
    history: [
        Select(
            Cow(
                "path",
            ),
        ),
        Delete,
    ],
    selection: [],
    info: Some(
        Info {
            element_id: None,
            content_model: ContentModel {
                permitted_categories: ElementCategory(
                    0x0,
                ),
                permitted_elements: {},
            },
            attributes: AttrModel {
                expected_attribute_groups: AttributeGroup(
                    0x0,
                ),
                expected_attributes: {},
                values: {},
            },
            text: Some(
                Static(
                    "",
                ),
            ),
        },
    ),
}
