crates/oxvg_actions/src/actions/structure/snapshots/oxvg_actions__actions__structure__deletion__test__insert.snap
---
source: crates/oxvg_actions/src/actions/structure/deletion.rs
expression: actor.root.serialize().unwrap()
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:oxvg="https://oxvg.noahwbaldwin.me"><oxvg:state><oxvg:history><oxvg:action oxvg:id="Select"><oxvg:arg>path</oxvg:arg></oxvg:action><oxvg:action oxvg:id="Delete"/></oxvg:history></oxvg:state></svg>
